kube/laravel-kubernetes-demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-kubernetes-demo-app
  namespace: default
  labels:
    app: laravel-kubernetes-demo-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: laravel-kubernetes-demo-app
