kube/ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: laravel-kubernetes-demo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-server
    servicePort: 80
  rules:
  - host: arlestesting.site
  - http:
      paths:
      - path: /
        backend:
          serviceName: laravel-kubernetes-demo-app
          servicePort: 80
